# game-of-life-rs

./: .editorconfig  .gitignore  .gitmessage  .huskyrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  commitlint.config.js  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: game.rs  main.rs  patterns.rs  save_load.rs  statistics.rs  theme.rs  ui.rs  ui_state.rs
src/save_load/: mod.rs  rle.rs
